--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/sketch.png" class="image fit thumb"><img src="images/thumbs/formatsketch.jpg" alt="" /></a>
+								<a href="images/fulls/sketch.jpg" class="image fit thumb"><img src="images/thumbs/formatsketch.jpg" alt="" /></a>
 								<h3>Assignment #2 Sketch of Zakim bridge</h3>
 								<p>Infographic sketch of Zakim bridge</p>
 							</article>
