--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/D3_chart.jpg" class="image fit thumb"><img src="images/thumbs/D3_chart.jpg" alt="" /></a>
+								<h3>Assignment #3 D3 chart</h3>
+								<p>Visualizing data from Boston Water and Sewer Commission</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/SVG_chart.jpg" class="image fit thumb"><img src="images/thumbs/SVG_chart.jpg" alt="" /></a>
+								<h3>Assignment #3 SVG chart</h3>
+								<p>Visualizing data from Boston Water and Sewer Commission</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/sketch.jpg" class="image fit thumb"><img src="images/thumbs/formatsketch.jpg" alt="" /></a>
 								<h3>Assignment #2 Sketch of Zakim bridge</h3>
 								<p>Infographic sketch of Zakim bridge</p>
