--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Data Analysis on RateMyProfessor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,9 +31,11 @@
 						<header class="major">
 							<h2>CS697 Visualizing Boston Portfolio</h2>
 						</header>
+						
+
 						<p>My recent work</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="professor.html" class="button">Data Analysis on RateMyProfessor</a></li>
 						</ul>
 					</section>
 
