--- a/professor.html
+++ b/professor.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Data Analysis on RateMyProfessor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/professor_style.css" />
@@ -30,6 +30,10 @@
 					<section id="one">
 						<header class="major">
 							<h2>Data Analysis on Factors Determining Professors' Salary</h2>
+							<h4>Tools:<br>
+								Data processing - JS, Pandas in Colab<br>
+								Visualization - Bokeh, Matplotlib, and Holoview</h4>
+							
 						</header>
 						
 						<h2>Introduction</h2>
